2008-02-03  Ruben Vermeersch  <ruben@savanne.be>
	
	Rename extension types into more meaningful names. TypeExtensionNode is an
	implementation detail.

	* src/Core/Banshee.Services/Banshee.Services.addin.xml: Rename the four
	different TypeExtensionNodes (which all had different functionality into):
		Service, Source, ImportSource and PlayerEngine.

	* src/Backends/Banshee.GStreamer/Banshee.GStreamer.addin.xml:
	* src/Core/Banshee.ThickClient/Banshee.ThickClient.addin.xml:
	* src/Extensions/Banshee.Audioscrobbler/Resources/Banshee.Audioscrobbler.addin.xml:
	* src/Extensions/Banshee.MultimediaKeys/Resources/Banshee.MultimediaKeys.addin.xml:
	* src/Extensions/Banshee.NotificationArea/Resources/Banshee.NotificationArea.addin.xml:
	* src/Extensions/Banshee.PlayQueue/Resources/Banshee.PlayQueue.addin.xml:
	Adjust addin.xml files accordingly.

2008-02-02  Ruben Vermeersch  <ruben@savanne.be>

	* src/Core/Banshee.Services/Banshee.Sources/SourceManager.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellTrackNumber.cs: Added.
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	* src/Core/Banshee.ThickClient/Makefile.am: Fix a regression from old
	Banshee, don't show the track number if it's zero. Just show empty space.

2008-02-02  Aaron Bockover  <aaron@abock.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Use smarter calculations for computing the row height and middle-aligning
	contents in a row; should look better across all font sizes now

	* src/Core/Hyena.Gui/Hyena.Widgets/RoundedFrame.cs: Reduce the inner border
	width to the correct size to be consistent with the ListView

2008-02-01  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs: Made
	  to use DatabaseConfigurationClient when checking for version.

	* src/Core/Banshee.Services/Banshee.Configuration: