@@ -1,3 +1,8 @@
+2008-02-03  Aaron Bockover  <abock@gnome.org>
+
+	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Do some trimming
+	in the Display* properties
+
 2008-02-03  Ruben Vermeersch  <ruben@savanne.be>
 	
 	Rename extension types into more meaningful names. TypeExtensionNode is an
